@@ -796,6 +796,17 @@ makeFlatDataFrame <- function(dataset, groupBy, fusionGroupBy=NULL) {
 	return(out)
 } # EOF
 
+makeFlatDataFrameMulti <- function(dataset, groupBy) {
+	colInd <- which(colnames(dataset$header) %in% groupBy)
+	grouping <- dataset$header[, colInd, drop=FALSE]
+	class(grouping) <- "data.frame" # to get rid of the "AsIs" that, strangely, got smuggled in..
+	NIR <- as.data.frame(matrix(dataset$NIR, nrow=(nrow(dataset$NIR))))
+	out <- cbind(grouping, NIR)
+	colnames(out) <- c(groupBy, colnames(dataset$NIR))
+	rownames(out) <- rownames(dataset)
+	return(out)
+} # EOF
+
 #' @title Get a single dataset from the 'cube'
 #' @description Get a single dataset, referenced by its index, from the 'cube' 
 #' object, i.e. the object generated by \code{\link{gdmm}}.
