@@ -1,3 +1,4 @@
+#############################
 Version 0.1.8
 New:	
 	Added possibility to plot Aquagrams linear instead of circular. Factory-default is linear; 
@@ -5,12 +6,16 @@ New:
 	Added output of table indicating significant differences between groups and the corresponding values.
 	Added some more Aquagram specific options to the settings file.
 	Resampling of data to new wavelengths (core data manipulation function).
+	Added possibility to average spectra by any class-variable grouping (function "do_avg").
+	
 Improved:
 	If exact temperature is present in temperature calibration data, "loess" is not used any more.
 	In the "diff" modes of the Aquagram, the input for "aqg.minus" is now vectorized, i.e. you can supply 
 		a character vector in "aqg.minus" for corresponding subtractions in the character vector in "aqg.vars".
+		
 Bugfix:
 	Classic Aquagram can now be produced without having a temperature calibration file.
 	Outlier-detection using the package rrcovHD should now work on all systems.
 	Now correct detection of range (precise wavelength independent) in universal AUC table.
 	Various other small bugfixes.
+#############################
